--- a/templates/volume-management-iam-role-policy.json.j2
+++ b/templates/volume-management-iam-role-policy.json.j2
@@ -24,7 +24,9 @@
                 "ec2:CreateTags",
                 "ec2:DescribeVolumes",
                 "ec2:CreateSnapshot",
-                "ec2:DescribeSnapshots"
+                "ec2:DescribeSnapshots",
+                "ec2:DescribeImages",
+                "ec2:DeleteSnapshot"
             ],
             "Resource": [
                 "*"
