--- a/templates/volume-management-iam-role-policy.json.j2
+++ b/templates/volume-management-iam-role-policy.json.j2
@@ -22,6 +22,8 @@
             "Effect": "Allow",
             "Action": [
                 "ec2:CreateTags",
+                "ec2:DescribeInstances",
+                "ec2:DeregisterImage",
                 "ec2:DescribeVolumes",
                 "ec2:CreateSnapshot",
                 "ec2:DescribeSnapshots",
