Allow the IAM role to create the image

--- a/templates/volume-management-iam-role-policy.json.j2
+++ b/templates/volume-management-iam-role-policy.json.j2
@@ -28,6 +28,7 @@
                 "ec2:CreateSnapshot",
                 "ec2:DescribeSnapshots",
                 "ec2:DescribeImages",
+                "ec2:CreateImage",
                 "ec2:DeleteSnapshot"
             ],
             "Resource": [
